fixed bug in getting suggested stretch

--- a/public/style.css
+++ b/public/style.css
@@ -627,6 +627,7 @@ li a {
   border: 1px solid black;
   font-family: "clear_sans_thinregular";
   font-weight: 700;
+  margin: 3px;
 }
 
 #modal-button:hover {
@@ -666,7 +667,8 @@ li a {
 .user-dash-container{
   position: absolute;
   top: 19%;
-
+  display: flex;
+  flex-direction: column;
 }
 
 .take-survey-btn{
